--- a/Infrastructure/templates/mlbparks-dev-template.yaml
+++ b/Infrastructure/templates/mlbparks-dev-template.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Template
 metadata:
-  name: ${GUID}-mlbparks-dev-template
+  name: mlbparks-dev-template
 objects:
 - apiVersion: v1
   kind: ImageStream
