--- a/Infrastructure/templates/mlbparks-pipeline-template.yaml
+++ b/Infrastructure/templates/mlbparks-pipeline-template.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Template
 metadata:
-  name: ${GUID}-mlbparks-pipeline-template
+  name: mlbparks-pipeline-template
 objects:
 - kind: BuildConfig
   apiVersion: v1
