--- a/Infrastructure/templates/nexus-template.yaml
+++ b/Infrastructure/templates/nexus-template.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Template
 metadata:
-  name: ${GUID}-nexus-template
+  name: nexus-template
 objects:
 - apiVersion: v1
   kind: ImageStream
