--- a/Infrastructure/templates/parksmap-prod-template.yaml
+++ b/Infrastructure/templates/parksmap-prod-template.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Template
 metadata:
-  name: ${GUID}-parksmap-prod-template
+  name: parksmap-prod-template
 objects:
 - apiVersion: v1
   kind: ConfigMap
@@ -197,8 +197,3 @@ objects:
     sessionAffinity: None
     type: ClusterIP
 parameters:
-- name: GUID
-  displayName: GUID
-  description: guid
-  value: ddibarto
-  required: true
