--- a/MLBParks/Jenkinsfile
+++ b/MLBParks/Jenkinsfile
@@ -78,16 +78,16 @@ podTemplate(
       stage('Build and Tag OpenShift Image') {
         echo "Building OpenShift container image tasks:${devTag}"
         sh "oc start-build ${serviceId} --follow --from-file=./target/${serviceId}.war -n ${GUID}-parks-dev"
-        openshiftTag alias: 'false', destStream: '${serviceId}', destTag: devTag, destinationNamespace: '${GUID}-parks-dev', namespace: '${GUID}-parks-dev', srcStream: '${serviceId}', srcTag: 'latest', verbose: 'false'
+        openshiftTag alias: 'false', destStream: serviceId, destTag: devTag, destinationNamespace: '${GUID}-parks-dev', namespace: '${GUID}-parks-dev', srcStream: serviceId, srcTag: 'latest', verbose: 'false'
       }
 
       // Deploy the built image to the Development Environment.
       stage('Deploy to Dev') {
         echo "Deploying container image to Development Project"
         sh "oc set image dc/${serviceId} ${serviceId}=docker-registry.default.svc:5000/${GUID}-parks-dev/${serviceId}:${devTag} -n ${GUID}-parks-dev"
-        openshiftDeploy depCfg: '${serviceId}', namespace: '${GUID}-parks-dev', verbose: 'false', waitUnit: 'sec', waitTime: ''
-        openshiftVerifyDeployment depCfg: '${serviceId}', namespace: '${GUID}-parks-dev', replicaCount: '1', verbose: 'false', verifyReplicaCount: 'false', waitUnit: 'sec', waitTime: ''
-        openshiftVerifyService namespace: '${GUID}-parks-dev', svcName: '${serviceId}', verbose: 'false'
+        openshiftDeploy depCfg: serviceId, namespace: '${GUID}-parks-dev', verbose: 'false', waitUnit: 'sec', waitTime: ''
+        openshiftVerifyDeployment depCfg: serviceId, namespace: '${GUID}-parks-dev', replicaCount: '1', verbose: 'false', verifyReplicaCount: 'false', waitUnit: 'sec', waitTime: ''
+        openshiftVerifyService namespace: '${GUID}-parks-dev', svcName: serviceId, verbose: 'false'
       }
 
       // Run Integration Tests in the Development Environment.
@@ -102,7 +102,7 @@ podTemplate(
         sh "skopeo copy --src-tls-verify=false --dest-tls-verify=false --src-creds openshift:\$(oc whoami -t) --dest-creds admin:admin123 docker://docker-registry.default.svc.cluster.local:5000/${GUID}-parks-dev/${serviceId}:${devTag} docker://nexus-registry.${GUID}-nexus.svc.cluster.local:5000/${serviceId}:${devTag}"
 
         // Tag built image with production tag
-        openshiftTag alias: 'false', destStream: '${serviceId}', destTag: prodTag, destinationNamespace: '${GUID}-parks-dev', srcStream: '${serviceId}', srcTag: devTag, namespace: '${GUID}-parks-dev', verbose: 'false'
+        openshiftTag alias: 'false', destStream: serviceId, destTag: prodTag, destinationNamespace: '${GUID}-parks-dev', srcStream: serviceId, srcTag: devTag, namespace: '${GUID}-parks-dev', verbose: 'false'
       }
 
       // Blue/Green Deployment into Production
