--- a/ParksMap/Jenkinsfile
+++ b/ParksMap/Jenkinsfile
@@ -135,7 +135,7 @@ podTemplate(
         sh "oc expose dc ${passiveApp} --port 8080 -n ${GUID}-parks-prod"
 
         echo "Switching Production application to ${destApp}."
-        sh 'oc patch route ${serviceId} -n ${GUID}-parks-prod -p \'{"spec":{"to":{"name":"' + destApp + '"}}}\''
+        sh "oc patch route ${serviceId} -n ${GUID}-parks-prod -p '{\"spec\":{\"to\":{\"name\":\"" + destApp + "\"}}}'"
       }
     }
   }
