--- a/ParksMap/Jenkinsfile
+++ b/ParksMap/Jenkinsfile
@@ -115,7 +115,7 @@ podTemplate(
         }
         echo "Active Application is:      " + activeApp
         echo "Destination Application is: " + destApp
-        echo "Passive Application is: " + passiveApp
+        echo "Passive Application will be: " + passiveApp
 
         // Update the Image on the prod dc
         sh "oc set image dc/${destApp} ${destApp}=docker-registry.default.svc:5000/${GUID}-parks-dev/${serviceId}:${prodTag} -n ${GUID}-parks-prod"
