Fixed mongodb bug

--- a/Infrastructure/templates/mongodb-statefulset-template.yaml
+++ b/Infrastructure/templates/mongodb-statefulset-template.yaml
@@ -80,16 +80,10 @@ objects:
                 command:
                   - stat
                   - /tmp/initialized
-    volumeClaimTemplates:
-      - metadata:
+        volumes:
+        - emptyDir:
+            medium: ""
           name: mongo-data
-          labels:
-            name: "mongodb"
-        spec:
-          accessModes: [ ReadWriteOnce ]
-          resources:
-            requests:
-              storage: "${VOLUME_CAPACITY}"
 parameters:
 - name: MONGODB_USER
   displayName: MONGODB_USER
@@ -122,10 +116,6 @@ parameters:
   description: mongodb keyfile value
   value: "12345678901234567890"
   required: true
-- name: VOLUME_CAPACITY
-  displayName: VOLUME_CAPACITY
-  description: volume capacity
-  value: "1Gi"
 - name: MEMORY_LIMIT
   displayName: MEMORY_LIMIT
   description: memory limit
