--- a/MLBParks/Jenkinsfile
+++ b/MLBParks/Jenkinsfile
@@ -7,6 +7,8 @@ podTemplate(
     containerTemplate(
       name: "jnlp",
       image: "docker-registry.default.svc:5000/${GUID}-jenkins/jenkins-slave-maven-appdev:latest",
+      resourceRequestCpu: "1",
+      resourceLimitCpu: "2",
       resourceRequestMemory: "1Gi",
       resourceLimitMemory: "2Gi"
     )
