--- a/Infrastructure/templates/nexus-template.yaml
+++ b/Infrastructure/templates/nexus-template.yaml
@@ -63,10 +63,10 @@ objects:
             timeoutSeconds: 1
           resources:
             limits:
-              cpu: 2
+              cpu: 1
               memory: 2Gi
             requests:
-              cpu: 1
+              cpu: 500m
               memory: 1Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
