--- a/Infrastructure/templates/sonar-template.yaml
+++ b/Infrastructure/templates/sonar-template.yaml
@@ -112,10 +112,10 @@ objects:
             timeoutSeconds: 5
           resources:
             requests:
-              cpu: 1
+              cpu: 500m
               memory: 1.5Gi
             limits:
-              cpu: 2
+              cpu: 1
               memory: 3Gi
           terminationMessagePath: /dev/termination-log
           volumeMounts:
