--- a/MLBParks/Jenkinsfile
+++ b/MLBParks/Jenkinsfile
@@ -7,8 +7,8 @@ podTemplate(
     containerTemplate(
       name: "jnlp",
       image: "docker-registry.default.svc:5000/${GUID}-jenkins/jenkins-slave-maven-appdev:latest",
-      resourceRequestCpu: "500m",
-      resourceLimitCpu: "1",
+      resourceRequestCpu: "250m",
+      resourceLimitCpu: "500m",
       resourceRequestMemory: "1Gi",
       resourceLimitMemory: "2Gi"
     )
