--- a/Infrastructure/templates/mlbparks-dev-template.yaml
+++ b/Infrastructure/templates/mlbparks-dev-template.yaml
@@ -90,6 +90,13 @@ objects:
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 1
+          resources:
+            limits:
+              cpu: 500m
+              memory: 512Mi
+            requests:
+              cpu: 50m
+              memory: 256Mi
           ports:
           - containerPort: 8080
             protocol: TCP
@@ -124,7 +131,6 @@ objects:
               configMapKeyRef:
                 name: mlbparks-config
                 key: app_name
-          resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
         dnsPolicy: ClusterFirst
