--- a/Infrastructure/templates/parksmap-prod-template.yaml
+++ b/Infrastructure/templates/parksmap-prod-template.yaml
@@ -64,6 +64,13 @@ objects:
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 1
+          resources:
+            limits:
+              cpu: 500m
+              memory: 512Mi
+            requests:
+              cpu: 50m
+              memory: 256Mi
           ports:
           - containerPort: 8080
             protocol: TCP
@@ -73,7 +80,6 @@ objects:
               configMapKeyRef:
                 name: parksmap-green-config
                 key: app_name
-          resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
         dnsPolicy: ClusterFirst
@@ -132,6 +138,13 @@ objects:
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 1
+          resources:
+            limits:
+              cpu: 500m
+              memory: 512Mi
+            requests:
+              cpu: 50m
+              memory: 256Mi
           ports:
           - containerPort: 8080
             protocol: TCP
@@ -141,7 +154,6 @@ objects:
               configMapKeyRef:
                 name: parksmap-blue-config
                 key: app_name
-          resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
         dnsPolicy: ClusterFirst
